--- a/frontend/src/locales/ta.json
+++ b/frontend/src/locales/ta.json
@@ -232,72 +232,125 @@
       "address": "நம்பர் 16, ராம் நகர், வேளச்சேரி, சென்னை - 600042"
     }
   },
-
   "viif": {
-    "title": "உணர்ச்சி ஊக்கம் அளிக்கும் இலங்கோ",
-    "subtitle1": "வாழ்க்கைகளை மாற்றும்",
-    "subtitle2": "நம்பிக்கைகளை ஊட்டும்",
+    "title": "ஈர்க்கும் இளங்கோ",
+    "subtitle1": "வாழ்வுகளை மாற்றுவது",
+    "subtitle2": "நம்பிக்கைகளை ஊக்குவிக்கிறது",
+
     "about": {
-      "heading": "அமைப்பைப் பற்றி",
-      "description": "விஷன் இன்ஸ்பைரிங் இலங்கோ பவுண்டேஷன் (VIIF) ஒரு பதிவு செய்யப்பட்ட, லாப நோக்கமற்ற, அரசாங்கத்தால் அங்கீகரிக்கப்பட்ட தொண்டு நிறுவனம். இது உணர்ச்சி ஆதரவு, உள்ளடக்கிய வளர்ச்சி மற்றும் வாழ்க்கையை மாற்றும் பயிற்சி நிகழ்ச்சிகளுக்காக உருவாக்கப்பட்டுள்ளது."
+      "heading": "அறக்கட்டளை பற்றி",
+      "description": "விஷன் ஈர்க்கும் இளங்கோ அறக்கட்டளை (VIIF) என்பது பதிவுசெய்யப்பட்ட, இலாபமற்ற, அரசுக்கு சார்பற்ற அமைப்பாகும். இது உணர்ச்சி வலிமை, உள்ளடக்கிய வளர்ச்சி மற்றும் வாழ்க்கையை மாற்றும் பயிற்சி திட்டங்களுக்கு அர்ப்பணிக்கப்பட்டது. டாக்டர் ஈர்க்கும் இளங்கோ மற்றும் திருமதி ஸ்ரிலதா இளங்கோ ஆகியோரால் இணைந்து நிறுவப்பட்ட இந்த அறக்கட்டளை, உணர்ச்சி நெருக்கடிகள், அமைப்புச் சிதைவு அல்லது சமூக புறக்கணிப்பை எதிர்கொள்பவர்களுக்கு பாதுகாப்பான தங்குமிடமாக உள்ளது."
     },
+
     "vision": {
       "heading": "எங்கள் பார்வை",
-      "text": "உணர்ச்சி பாதிப்பு, போதை, டிஜிட்டல் அடிமைத்தனம் மற்றும் உள்முக ஒடுக்குமுறையால் பாதிக்கப்பட்ட வாழ்கைகளில் அடிக்கடி மாற்றத்தை உருவாக்குதல்."
+      "text": "உணர்ச்சி அடிமைத்தன்மை, போதை, டிஜிட்டல் அடிமைத்தன்மை மற்றும் உள்நோக்கிய ஒடுக்குமுறையால் பாதிக்கப்பட்ட வாழ்வுகளை மாற்றுவதே எங்கள் இலக்கு. எங்கள் பார்வை: மரியாதை, உணர்ச்சி சுதந்திரம், சமத்துவம், கருணை மற்றும் மனித மதிப்பை அடிப்படையாகக் கொண்ட உலகம்."
     },
+
     "mission": {
-      "heading": "எங்கள் பணிக்கோலம்",
-      "text": "உணர்ச்சி சுதந்திரம் மற்றும் உளவியல் உறுதிமையை எல்லோருக்கும் எளிதில் கிடைக்கும் வகையில் செய்வது எங்கள் நோக்கமாகும், குறிப்பாக பார்வையற்ற மற்றும் உணர்ச்சிபூர்வமான முறையில் பாதிக்கப்பட்டவர்களுக்காக."
+      "heading": "எங்கள் பணிக்கொள்கை",
+      "text": "பார்வைத்தடையுடையவர்களுக்கும் உணர்ச்சிப் பூர்வமாக நொறுங்கியவர்களுக்கும் முக்கியத்துவம் அளிக்கின்ற, ஊக்கமளிக்கும் நிகழ்ச்சிகள், பயிற்சிகள் மற்றும் பரிவுள்ள தலையீடுகளின் மூலம் உணர்ச்சி வலிமையை ஊக்குவிக்க வேண்டும். உணர்ச்சி சுதந்திரம், மன தெளிவு மற்றும் உளவியல் உறுதியை அனைவரும் நுகரக்கூடியவையாக மாற்றுவதே எங்கள் நோக்கம்."
     },
+
     "why_now": {
-      "heading": "ஏன் இப்போது முக்கியம்?",
-      "global": "உலகளவில் வருடத்துக்கு 700,000 க்கும் மேற்பட்டோர் தற்கொலை செய்கிறார்கள் — ஒவ்வொரு 40 வினாடிக்கும் ஒருவர் (WHO).",
-      "india": "இந்தியா உலக தற்கொலை இறப்புகளில் 20% பங்கிடுகிறது. 2021 இல், இந்தியாவில் 1,64,033 தற்கொலைகள் பதிவு செய்யப்பட்டது.",
-      "economic": "தற்கொலை மற்றும் மனநலம் தொடர்பான சிக்கல்கள் உற்பத்தித்திறன் மற்றும் பொருளாதார வளர்ச்சியை குறைக்கின்றன."
+      "heading": "ஏன் இப்போது இதை செய்யவேண்டும்",
+      "global": "உலகளவில் வருடத்திற்கு 7 லட்சத்துக்கும் மேற்பட்டோர் தற்கொலை செய்கிறார்கள் — ஒவ்வொரு 40 வினாடிக்கும் ஒருவர். 15–29 வயதுடையோருக்கு இது மூன்றாவது முக்கியமான மரணக் காரணமாக உள்ளது.",
+      "india": "உலக தற்கொலை மரணங்களில் இந்தியா 20%ஐப் பெறுகிறது. 2021ஆம் ஆண்டில், இந்தியாவில் 1,64,033 பேர் தற்கொலை செய்துகொண்டனர் — கடந்த வருடத்தைவிட 7.2% அதிகம். தமிழ்நாடு மட்டும் 18,925 சம்பவங்களை பதிவு செய்தது; மகாராஷ்டிரா 22,207 வழக்குகளுடன் முதல் இடத்தில் உள்ளது.",
+      "economic": "தற்கொலை மற்றும் மனநல பிரச்சினைகள் உற்பத்தித்திறன் மற்றும் பொருளாதார வளர்ச்சியில் குறிப்பிடத்தக்க குறைவினை ஏற்படுத்துகின்றன. தமிழ்நாட்டின் ஜிடிபிக்கும் இதனால் நேரடி பாதிப்பு உள்ளது."
     },
+
     "shortage": {
       "heading": "மனநல நிபுணர்கள் பற்றாக்குறை",
-      "text": "இந்தியாவில் ஒவ்வொரு 1,00,000 மக்களுக்கும் 0.75 மனநல நிபுணர்கள் மட்டுமே உள்ளனர் — உலக அளவிலான சராசரியை விட குறைவாக உள்ளது."
+      "text": "இந்தியாவில் ஒவ்வொரு 1 லட்சம் மக்களுக்கும் 0.75 மனநல நிபுணர்கள் மட்டுமே உள்ளனர் — உலக சராசரியான 3–6க்குக் குறைவாகவே உள்ளது. கோடிக்கணக்கானோர் பயிற்சி பெற்ற உதவியின்றி வாழ்கின்றனர்."
     },
+
     "initiatives": {
-      "heading": "எங்கள் முக்கிய முயற்சிகள்",
+      "heading": "எங்கள் முன்னணி முயற்சிகள்",
+      "description": "சர்வதேச நன்கொடையாளர், CSR நிறுவனங்கள் மற்றும் நிறுவனங்களின் ஆதரவுடன், இந்த அனைத்து திட்டங்களும் பரந்த அளவில் செயல்படுத்த தயாராக உள்ளன.",
       "list": [
-        "ஹோப் லைன் – 24/7 மனநல ஆதரவு மையம்",
-        "இன்ஸ்பிடெயின்மென்ட் – ஊக்கம் மற்றும் பொழுதுபோக்கு இணைப்பு நிகழ்வுகள்",
-        "பார்வை சக்தி – பார்வையற்றோருக்கான டிஜிட்டல் கல்வி",
-        "உயரும் நட்சத்திரங்கள் – மாணவர்களுக்கான நாகரிக வளர்ச்சி",
-        "லைவ் லைஃப் முகாம் – மனநல விழிப்புணர்வு",
-        "ஸ்பீக் அப் – ஆங்கிலம் மூலம் தன்னம்பிக்கை",
-        "எம்பவர் ஹர் – பெண்களுக்கான நலன் மற்றும் தலைமை பயிற்சி",
-        "உணர்ச்சி நலம் கிளினிக்குகள் – கவுன்சிலிங் மற்றும் குழு சிகிச்சை",
-        "இன்ஸ்பயர்ட் லிவிங் – இலங்கோ மற்றும் நிபுணர்களின் பேச்சுகள்",
-        "பிரேக்கிங் ஃப்ரீ – போதை பற்றிய விழிப்புணர்வு",
-        "ஹெல்த்தி சாய்ஸஸ் – உணவு மற்றும் உணர்ச்சிகள் பற்றிய விழிப்புணர்வு",
-        "ஒளிரும் வாழ்வு – வாழ்க்கை முறையும் கவனமும்",
-        "டிஜிட்டல் ஞானம் – தொழில்நுட்பத்தின் புத்திசாலித்தனமான பயன்பாடு",
-        "ஸ்மார்ட் பேரன்டிங் – குழந்தைகளை வளர்ப்பதற்கான வழிகாட்டி",
-        "ஹோப் ஃபண்ட் – புற்றுநோயாளிகளுக்கான ஆதரவு"
+        {
+          "title": "1. ஹோப்ப்லைன் – 24/7 மனநல மையம்",
+          "description": "தகுந்த பயிற்சி பெற்ற மனநல நிபுணர்களால் முழுநேரமான உணர்ச்சி ஆதரவு மற்றும் நெருக்கடி தலையீடு."
+        },
+        {
+          "title": "2. இன்ஸ்பிடெயின்மெண்ட்™ – ஊக்கம் மற்றும் பொழுதுபோக்கு இணைந்த நிகழ்வுகள்",
+          "description": "ஊக்கமளிக்கும் பேச்சுகள், இசை, கலந்துரையாடல்கள் மற்றும் மனநலம் சார்ந்த takeaway-கள் கொண்ட நேரடி நிகழ்வுகள்."
+        },
+        {
+          "title": "3. எம்பவரிங் விஷன் – பார்வைத்தடையுடையோருக்கான டிஜிட்டல் கல்வி",
+          "description": "உதவி தொழில்நுட்பம், தொடர்பு திறன் மற்றும் டிஜிட்டல் சுதந்திரத்தில் பயிற்சி வழங்கப்படுகிறது."
+        },
+        {
+          "title": "4. ரைசிங் ஸ்டார்ஸ் – மாணவர்களுக்கான தன்மைப்படுத்தல்",
+          "description": "சிறப்பான பாடநெறிகள் மூலம் உணர்ச்சி நுண்ணறிவு, ஆங்கிலம் மற்றும் தலைமைத்துவம் வளர்க்கப்படுகிறது."
+        },
+        {
+          "title": "5. லைவ் லைஃப் பிரச்சாரங்கள் – மனநல விழிப்புணர்வு",
+          "description": "பின்தங்கிய சமூகங்களுக்கு உணர்ச்சி உறுதி மற்றும் மனநல உறுதியை ஊக்குவிக்கும் நிகழ்வுகள் மற்றும் பொது பேச்சு பயிற்சிகள்."
+        },
+        {
+          "title": "6. ஸ்பீக் அப் – ஆங்கிலம் உரையாடலுக்காக",
+          "description": "முன்னேற்றமாக பேசும் ஆங்கில திறனை வளர்க்கும் பயிற்சிகள்."
+        },
+        {
+          "title": "7. எம்பவர் ஹர் – பெண்களின் நலன் மற்றும் தலைமைத்துவம்",
+          "description": "பெண்கள் நலன், உரிமை மற்றும் தொழில் முயற்சி மேம்பாட்டுக்கான பயிற்சிகள் மற்றும் கலந்துரையாடல்கள்."
+        },
+        {
+          "title": "8. உணர்ச்சி நலம் கிளினிக்குகள் – ஆலோசனை மற்றும் குழு சிகிச்சை",
+          "description": "மன அழுத்தம், கவலை, பீதியால் பாதிக்கப்பட்டோருக்கு நிபுணர் ஆலோசனைகள்."
+        },
+        {
+          "title": "9. இன்ஸ்பையர்ட் லிவிங் – ஊக்கமளிக்கும் பேச்சுகள்",
+          "description": "முன்னணி பேச்சாளர்களின், குறிப்பாக டாக்டர் இளங்கோவின் நிகழ்வுகள் மற்றும் வாழ்க்கை நெறிகள்."
+        },
+        {
+          "title": "10. பிரேக்கிங் ஃப்ரீ – போதை எதிர்ப்பு விழிப்புணர்வு",
+          "description": "போதைக்கு எதிரான குறும்படங்கள், கலந்துரையாடல்கள் மற்றும் பயிற்சிகள்."
+        },
+        {
+          "title": "11. ஹெல்தி சாய்சஸ் – உணவு மற்றும் மனநல தொடர்பு",
+          "description": "உணவு மற்றும் உணர்ச்சி நலனுக்கான விழிப்புணர்வு பிரச்சாரங்கள்."
+        },
+        {
+          "title": "12. ஹோலிஸ்டிக் ஹெல்த் – வாழ்நிலை மற்றும் மன அமைதி",
+          "description": "தூக்க கட்டுப்பாடு, உடற்பயிற்சி, டிஜிட்டல் ஒழுங்கு ஆகியவற்றிற்கான பயிற்சிகள்."
+        },
+        {
+          "title": "13. டிஜிட்டல் விஸ்டம் – நுண்ணறிவான டிஜிட்டல் பயன்பாடு",
+          "description": "மாணவர்கள் மற்றும் நிபுணர்களுக்கான டிஜிட்டல் ஒழுக்கம் மற்றும் AI பயன்பாட்டு விழிப்புணர்வு."
+        },
+        {
+          "title": "14. ஸ்மார்ட் பேறெண்டிங்",
+          "description": "உணர்ச்சி அறிவு மற்றும் டிஜிட்டல் பாதுகாப்பு அடிப்படையிலான பெற்றோர் வழிகாட்டல்."
+        },
+        {
+          "title": "15. ஹோப் பண்ட் – நோயுற்றோருக்கான ஆதரவு",
+          "description": "அதிக பாதிப்பு உள்ள நோய்களுக்கு நிதியுதவி மற்றும் உணர்ச்சி ஆதரவு."
+        }
       ]
     },
+
     "founders": {
-      "heading": "நிறுவனர் மற்றும் அறங்காவலர்கள்",
+      "heading": "நிறுவுநர்கள் மற்றும் நம்பிக்கையாளர்கள்",
       "ilango": {
-        "name": "டாக்டர் இன்ஸ்பைரிங் இலங்கோ",
-        "role": "நிறுவனர் மற்றும் நிர்வாக அறங்காவலர்",
-        "bio": "உலகப் புகழ்பெற்ற பேச்சாளர், உணர்ச்சி நிபுணர் மற்றும் உலக சாதனையாளரான இலங்கோ அவர்கள் பார்வை இழப்பை அவருடைய பலமாக மாற்றியவர்."
+        "name": "டாக்டர் ஈர்க்கும் இளங்கோ",
+        "role": "நிறுவனர் மற்றும் நிர்வாக நம்பிக்கையாளர்",
+        "bio": "உலக அளவில் பேசப்படும் பேச்சாளர், உணர்ச்சி நுண்ணறிவு நிபுணர் மற்றும் சுய பயிற்சி பெற்ற பாடகர். பார்வை இழப்பை அவரது வாழ்க்கையின் பலமாக மாற்றியவர். கடல் நீராழ்தல் மற்றும் தனிப்பட்ட paragliding சாதனைகளில் உலக சாதனை வைத்தவர்."
       },
       "srilatha": {
-        "name": "ஸ்ரீலதா இலங்கோ",
-        "role": "நிறுவனர் மற்றும் அறங்காவலர்",
-        "bio": "பெண்கள் நலத்திற்கும் திட்டமிடல் செயல்திறனுக்குமான போராளி, VIIF மற்றும் Ace Panacea நிறுவனங்களில் முக்கிய பாத்திரம் வகிக்கிறார்."
+        "name": "ஸ்ரிலதா இளங்கோ",
+        "role": "நிறுவனர் மற்றும் நம்பிக்கையாளர்",
+        "bio": "பெண்கள் நலனுக்காக அர்ப்பணித்தவர். பயிற்சித் திட்டங்களின் திறம்பட செயலாக்கத்தையும் ஊக்கமளிக்கும் ஊடக முன்னெடுப்புகளையும் வழிநடத்துபவர். இந்தியா முழுவதும் மனநலம் மற்றும் சமத்துவம் மேம்பாட்டில் முக்கிய பங்கு வகிக்கிறார்."
       }
     },
+
     "donation": {
-      "heading": "உங்கள் பங்களிப்பு எங்களுக்கு தேவையானது",
-      "text": "VIIF இந்திய அரசாங்கத்தின் CSR பங்களிப்புகளுக்குத் தகுதி பெற்ற நிறுவனம். நன்கொடையை அல்ல, நம்பிக்கையாளர்களை தேடுகிறோம்.",
+      "heading": "உங்களிடம் இருந்து எங்களுக்கு தேவையானது",
+      "text": "VIIF இந்திய அரசால் CSR நன்கொடைகளை பெற அங்கீகரிக்கப்பட்டது. நாங்கள் நன்கொடையை வேண்டவில்லை — நாங்கள் உங்களை போன்ற தலைவர்களை நாடுகிறோம். எங்கள் ஹோப்ப்லைன் மனநல மையத்திற்கு நிதியுதவி அளியுங்கள். மாற்றத்தை உருவாக்கும் எங்கள் திட்டங்களை ஆதரிக்கவும். ஒவ்வொரு நன்கொடைம்சும் ஒரு உயிர்காக்கும் வாய்ப்பு.",
       "accounts": [
         {
-          "bank": "ஐசிஐசிஐ வங்கி",
+          "bank": "ICICI வங்கி",
           "account_name": "Vision Inspiring Ilango Foundation",
           "account_no": "168001000906",
           "ifsc": "ICIC0001680",
@@ -306,22 +359,26 @@
         },
         {
           "bank": "ஆக்ஸிஸ் வங்கி",
+          "account_name": "Vision Inspiring Ilango Foundation",
           "account_no": "920010066165417",
           "ifsc": "UTIB0003492",
-          "branch": "அம்பத்தூர் இண்டஸ்ட்ரியல் எஸ்டேட், சென்னை",
+          "branch": "அம்பத்தூர் இன்டஸ்ட்ரியல் எஸ்டேட், சென்னை",
           "swift": "AXISINBB211"
         }
       ]
     },
+
     "contacts": {
-      "heading": "எங்களை அணுகுங்கள்",
+      "heading": "இப்போது எங்களை அணுகுங்கள்",
       "phone1": "+91 44 4331 3170",
       "phone2": "+91 99419 54545",
       "email": "info@viif.in",
-      "address": "புதிய எண் 16, பழைய எண் 12, இரண்டாவது தெரு, ராம்நகர், வேளச்சேரி, சென்னை – 600042"
+      "address": "புதிய எண்: 16, பழைய எண்: 12, இரண்டாம் தெரு, ராம நகர், வேளச்சேரி, சென்னை – 600042"
     },
-    "call_to_action": "அடுத்த நெருக்கடியைப் பார்ப்பதற்காக காத்திருக்க வேண்டாம். இன்று செயல்படுவோம். மாற்றத்தை ஊக்குவிப்போம்!"
+
+    "call_to_action": "அடுத்த நெருக்கடியை எதிர்பார்க்க வேண்டாம். இன்று செயல் படுவோம். மாற்றத்தை தூண்டுவோம்!"
   },
+
 
   "about": {
     "title": "டாக்டர் இன்ஸ்பையரிங் இலங்கோ பற்றி",
