--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -233,7 +233,7 @@
   "email_label": "Email",
 
   "footer": {
-    "copyright": "© {{year}} Inspiring Ilango. All rights reserved.",
+    "copyright": "© {{year}} The Brand Digital Solutions. All rights reserved.",
     "links": {
       "heading": "Quick Links",
       "home": "Home",
