--- a/frontend/src/locales/ta.json
+++ b/frontend/src/locales/ta.json
@@ -109,7 +109,7 @@
 ,
 
   "footer": {
-    "copyright": "© {{year}} இன்ஸ்பைரிங் இலங்கை. அனைத்து உரிமைகளும் பாதுகாக்கப்படுகின்றன.",
+    "copyright": "© {{year}} தீ பிராண்ட் டிஜிட்டல் தீர்வுகள். அனைத்து உரிமைகளும் பாதுகாக்கப்படுகின்றன.",
     "links": {
       "heading": "விரைவுப் இணைப்புகள்",
       "home": "முகப்பு",
