--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -18,7 +18,7 @@
     "cta": "Invite to Speak"
   },
   "videoIntro": {
-    "heading": "Meet Dr. Ilango",
+    "heading": "Meet Dr.Inspiring Ilango",
     "description": "Watch the inspiring story of the world’s only visually challenged emotional intelligence consultant.",
     "aria": "Introductory video section about Dr. Ilango",
     "videoLabel": "Intro video of Dr. Ilango",
