--- a/frontend/src/locales/ta.json
+++ b/frontend/src/locales/ta.json
@@ -34,7 +34,7 @@
     "description": "கல்வி, நிறுவன மேம்பாடு மற்றும் உலக நலனில் தலைமை வகிக்கும் நபர்களால் பரிந்துரைக்கப்படுகிறது."
   },
   "roles": {
-    "heading": "இளங்கோ யார்?",
+    "heading": "டாக்டர்.இன்ஸ்பைரிங் இளங்கோ யார்?",
     "motivationalSpeaker": {
       "title": "ஊக்கமளிக்கும் பேசுபவர்",
       "description": "மாற்றத்தை ஏற்படுத்தும் கதைகள், உணர்ச்சி நுண்ணறிவு மற்றும் உந்துதலான பார்வைகளின் மூலம் உலக பார்வையாளர்களை கவர்கிறார்."
