--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -3,6 +3,7 @@
     "navHome": "Home",
     "navHomepage": "Inspiring Ilango",
     "navAbout": "About",
+    "navGallery": "Gallery",
     "navServices": "Services",
     "navBlogs": "Blogs",
     "navEvents": "Events",
@@ -240,6 +241,7 @@
       "viif": "VIIF",
       "acePanacea": "Ace Panacea Life Skills Pvt. Ltd.",
       "about": "About",
+      "gallery": "Gallery",
       "services": "Services",
       "events": "Events",
       "blogs": "Blogs",
