--- a/frontend/src/locales/ta.json
+++ b/frontend/src/locales/ta.json
@@ -4,6 +4,7 @@
     "navHome": "முகப்பு",
     "navHomepage": "இன்ஸ்பைரிங் இளங்கோ",
     "navAbout": "எங்களை பற்றி",
+    "navGallery": "படத்தொகுப்பு",
     "navServices": "சேவைகள்",
     "navBlogs": "பிளாக்கள்",
     "navEvents": "நிகழ்ச்சிகள்",
@@ -116,6 +117,7 @@
       "viif": "VIIF",
       "acePanacea": "ஏஸ் பனாசியா லைஃப் ஸ்கில்ஸ் ப்ரைவேட் லிமிடெட்",
       "about": "எங்களை பற்றி",
+      "gallery": "படத்தொகுப்பு",
       "services": "சேவைகள்",
       "events": "நிகழ்வுகள்",
       "blogs": "வலைப்பதிவுகள்",
